--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {
-
-    }
+	"require": {
+	    "php": ">=5.1.0",
+	    "yiisoft/yii": "master"
+	}
 }
